--- a/paper.tex
+++ b/paper.tex
@@ -735,7 +735,7 @@ Here we use $\USp(2n_f)$ instead of $\SU(2n_f)$, because under the latter we als
 For even $n_c$, the anomaly should be given by  \begin{equation}
 \alpha= 2\pi i \cdot \frac12 w_2 \beta a_2
 \end{equation}
-where $w_2,a_2\in H^2(X;\bZ_2)$ controls the lift from $\SO(2n_c)/\bZ_2$ to $\SO(2n_c)$
+where $w_2,a_2\in H^2(X;\bZ_2)$ controls the lift from $\SO(2n_c)$ to $\Spin(2n_c)$
 and from $\USp(2n_f)/\bZ_2$ to $\USp(2n_f)$, respectively.
 For odd $n_c$, the anomaly cochain should be given by 
  \begin{equation}
