--- a/paper.tex
+++ b/paper.tex
@@ -351,6 +351,8 @@ This can be found rather physically by studying the line operators.
 
 \subsection{$\Spin$}
 We start by discussing the $\Spin(2n_c)$ gauge theories. 
+The results presented in this section was originally found in \cite[Sec.~4.4]{Hsin:2020nts}.
+
 First, recall that the center of $\Spin(2n_c)$ is $\bZ_2\times \bZ_2$ or $\bZ_4$ depending on whether $n_c$ is even or odd.
 This corresponds to the fact that the tensor square of a spinor representation contains the identity representation when $n_c$ is even while it contains the vector representation when $n_c$ is odd.
 
@@ -362,9 +364,9 @@ This can be screened by the dynamical fermion, which however carries the fundame
 and in particular transforms nontrivially under $-1\in \SU(2n_f)$.
 In other words, the flavor Wilson line in the vector representation of $\SU(2n_f)$ can now be considered as the square  of the gauge Wilson line in the spinor representation of $\Spin(2n_c)$.
 This means that we have the following extension of groups \begin{equation}
-0\to \underbrace{\bZ_2}_{\substack{\text{subgroup of}\\
-\text{rep.~of center of}\\
-\text{flavor $\SU(2n_f)$}}}
+0\to \underbrace{\bZ_2}_{\substack{\text{group of}\\
+\text{charges under}\\
+\text{$\{\pm1\}\in \SU(2n_f)$}}}
 \to \bZ_4 
 \to \underbrace{\bZ_2}_{\substack{\text{group of}\\\text{gauge Wilson lines }\\
 \text{up to screening}}} \to 0.
@@ -393,12 +395,18 @@ As $E=w_2$ and $v_2=a_2$, we conclude that the background field satisfies \begin
 \delta E=\beta a_2.
 \label{ba}
 \end{equation}
-This means that the $\bZ_2$ 1-form symmetry and the $\SU(2n_f)/\bZ_2$ 0-form flavor symmetry form the 2-group $H$ fitting in the sequence \begin{equation}
+
+In general, a 2-group $H$ combining a 1-form symmetry $A$ and a 0-form symmetry $G$ of the form \begin{equation}
+0\to A[1]\to H\to G\to 0
+\end{equation} with the extension class $\alpha\in H^3(BG,A)$ is defined as a symmetry whose background field is given by a pair of a degree-2 cochain $E\in C^2(X,A)$ and a background $G$ field $g:X\to BG$ such that $\delta E = g^*(\alpha)$.
+Here $A[1]$ means the Abelian group $A$ regarded as a 1-form symmetry,
+and we drop the pull-back symbol $g^*$ when its presence is clear from the context.
+In our case, we see that the $\bZ_2$ 1-form symmetry and the $\SU(2n_f)/\bZ_2$ 0-form flavor symmetry form the 2-group $H$ fitting in the sequence \begin{equation}
 0\to \bZ_2[1]\to H \to \SU(2n_f)/\bZ_2 \to 0
 \label{group-extension}
-\end{equation} with the Postnikov class being $\beta a_2 \in H^3(B(\SU(2n_f)/\bZ_2);\bZ_2)$.
+\end{equation} with the extension class being $\beta a_2 \in H^3(B(\SU(2n_f)/\bZ_2);\bZ_2)$.
 
-Before proceeding, we note that having the extension of groups of charges of line operators as in \eqref{charge-extension}
+Note that having the extension of groups of charges of line operators as in \eqref{charge-extension}
 is equivalent to having a nontrivial 2-group extension \eqref{group-extension} 
 whose background field satisfies \eqref{ba}.
 Therefore, to find a nontrivial 2-group extension, we can simply study the group of charges of line operators,
